tests/too-many-inputs.stderr
error: 
  ┌─ test:1:1
  │
1 │ show 1 2 3
  │ ^^^^^^
  │ │
  │ too many inputs provided to function
  │ expected `Number -> Number -> _`, but found `()`
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

